Name:               hsc3-server
Version:            0.1.0
Synopsis:           SuperCollider server resource management and synchronization.
Description:        This library provides abstractions for managing SuperCollider server resources like node, buffer and bus ids and synchronization primitives.
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten 2008-2011
Author:             Stefan Kersten
Maintainer:         Stefan Kersten
Stability:          experimental
Homepage:           http://space.k-hornz.de/software/hsc3-server
Tested-With:        GHC == 6.10.1, GHC == 6.12.3, GHC == 7.0.1
Build-Type:         Simple
Cabal-Version:      >= 1.9.2

Extra-Source-Files:
    include/Accessor.h

Library
    Exposed-Modules:
        Sound.SC3.Server.Allocator
        Sound.SC3.Server.Allocator.Range
        Sound.SC3.Server.Allocator.BlockAllocator.FirstFit
        Sound.SC3.Server.Allocator.SetAllocator
        Sound.SC3.Server.Allocator.SimpleAllocator
        Sound.SC3.Server.Connection
        Sound.SC3.Server.Monad
        Sound.SC3.Server.Notification
        Sound.SC3.Server.Process.Monad
        Sound.SC3.Server.State
        Sound.SC3.Server.State.Concurrent
    Other-Modules:
        Sound.SC3.Server.Allocator.BlockAllocator.FreeList        
    Build-Depends:
        base >= 3 && < 5
      , bitset >= 1.0
      , containers
      , data-accessor >= 0.2
      , deepseq >= 1.1
      , failure >= 0.1
      , hosc >= 0.8
      , hsc3 >= 0.7
      , hsc3-process >= 0.5
      , mtl >= 2
      , strict-concurrency
      , transformers
    Include-Dirs:
        include
    Ghc-Options:
        -W

Source-Repository head
    Type:       git
    Location:   git://github.com/kaoskorobase/hsc3-server.git

Test-Suite hsc3-server-test
    Type: exitcode-stdio-1.0
    Main-Is: test.hs
    Build-Depends:
        base
      , bitset >= 1.0
      , deepseq >= 1.1
      , failure >= 0.1
      , QuickCheck >= 2.4
      , random >= 1.0
      , test-framework
      , test-framework-quickcheck2
      , transformers >= 0.2
    Hs-Source-Dirs: tests, .
