Name:               hsc3-server
Version:            0.5.0
Synopsis:           SuperCollider server resource management and synchronization.
Description:
    This library provides abstractions for managing SuperCollider server
    resources like node, buffer and bus ids and synchronization primitives.
    .
    ChangeLog: <https://github.com/kaoskorobase/hsc3-server/blob/master/ChangeLog.md>
    .
    Examples: <https://github.com/kaoskorobase/hsc3-server/tree/master/examples>
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten 2008-2012
Author:             Stefan Kersten
Maintainer:         kaoskorobase@gmail.com
Homepage:           https://github.com/kaoskorobase/hsc3-server
Tested-With:        GHC == 7.4
Build-Type:         Simple
Cabal-Version:      >= 1.9.2

Flag build-examples
    Description:    Build example programs
    Default:        False

Library
    Exposed-Modules:
        Sound.SC3.Server.Allocator
        Sound.SC3.Server.Allocator.Range
        Sound.SC3.Server.Monad
        Sound.SC3.Server.Monad.Class
        Sound.SC3.Server.Monad.Command
        Sound.SC3.Server.Monad.Process
        Sound.SC3.Server.Notification
    Other-Modules:
        Sound.SC3.Server.Allocator.BlockAllocator.FirstFit
        Sound.SC3.Server.Allocator.BlockAllocator.FreeList
        Sound.SC3.Server.Allocator.SetAllocator
        Sound.SC3.Server.Allocator.SimpleAllocator
        Sound.SC3.Server.Allocator.Wrapped
        Sound.SC3.Server.Connection
        Sound.SC3.Server.Connection.ListenerMap
        Sound.SC3.Server.Connection.ListenerMap.HashTable
        Sound.SC3.Server.Connection.ListenerMap.List
        Sound.SC3.Server.Monad.Command.Completion
        Sound.SC3.Server.Monad.Request
        Sound.SC3.Server.State
    Build-Depends:
        base >= 4.3 && < 5
      , bitset >= 1.0 && < 1.2
      , containers >= 0.2 && < 0.6
      , failure >= 0.2 && < 0.3
      , hosc >= 0.12 && < 0.13
      , hsc3 >= 0.12 && < 0.13
      , hsc3-process == 0.8.*
      , lifted-base >= 0.1 && < 0.3
      , monad-control >= 0.3 && < 0.4
      , resourcet >= 0.3 && < 0.5
      , transformers >= 0.2 && < 0.4
      , transformers-base >= 0.4 && < 0.5
    Ghc-Options:
        -W
    Ghc-Prof-Options:
        -W -auto-all

Source-Repository head
    Type:       git
    Location:   git://github.com/kaoskorobase/hsc3-server.git

Executable hsc3-hello
    Main-Is: examples/hello.hs
    if flag(build-examples)
        Buildable: True
    else
        Buildable: False
    Build-Depends:
        base >= 4.3 && < 5
      , bitset >= 1.0 && < 1.2
      , containers >= 0.2 && < 0.6
      , failure >= 0.2 && < 0.3
      , hosc >= 0.12 && < 0.13
      , hsc3 >= 0.12 && < 0.13
      , hsc3-process == 0.8.*
      , lifted-base >= 0.1 && < 0.3
      , monad-control >= 0.3 && < 0.4
      , resourcet >= 0.3 && < 0.5
      , transformers >= 0.2 && < 0.4
      , transformers-base >= 0.4 && < 0.5
    Ghc-Options:
        -rtsopts -threaded

Executable hsc3-sine-grains
    Main-Is: examples/sine-grains.hs
    if flag(build-examples)
        Buildable: True
    else
        Buildable: False
    Build-Depends:
        base >= 4.3 && < 5
      , bitset >= 1.0 && < 1.2
      , containers >= 0.2 && < 0.6
      , failure >= 0.2 && < 0.3
      , hosc >= 0.12 && < 0.13
      , hsc3 >= 0.12 && < 0.13
      , hsc3-process == 0.8.*
      , lifted-base >= 0.1 && < 0.3
      , monad-control >= 0.3 && < 0.4
      , random >= 1.0 && < 1.1
      , resourcet >= 0.3 && < 0.5
      , transformers >= 0.2 && < 0.4
      , transformers-base >= 0.4 && < 0.5
      , unix >= 2.5 && < 2.7
    Ghc-Options:
        -rtsopts -threaded

Test-Suite hsc3-server-test
    Type: exitcode-stdio-1.0
    Main-Is: test.hs
    Other-Modules:
        Sound.SC3.Server.Allocator.Test
        Sound.SC3.Server.Allocator.Range.Test
    Build-Depends:
        base >= 4.3 && < 5
      , bitset >= 1.0
      , failure >= 0.1
      , QuickCheck >= 2.4
      , random >= 1.0
      , test-framework
      , test-framework-quickcheck2
      , transformers >= 0.2
    Hs-Source-Dirs: tests, .
